--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
+logging.level.com.springframework=debug
